sumo/tests/duarouter/errors/no_output/options.duarouter
--net-file=%SUMO_DIST%\tests\duarouter\errors\no_output\increasing_trips.net.xml --trip-defs=%SUMO_DIST%\tests\duarouter\errors\no_output\increasing_trips.trips.xml
